tooling/nargo_cli/tests/snapshots/execution_success/fold_basic_nested_call/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : []",
    "CALL func 1: PREDICATE: EXPR [ 1 ]",
    "inputs: [_0, _1], outputs: [_2]",
    "func 1",
    "current witness index : _4",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2]",
    "EXPR [ (1, _0) (-1, _3) 2 ]",
    "CALL func 2: PREDICATE: EXPR [ 1 ]",
    "inputs: [_3, _1], outputs: [_4]",
    "EXPR [ (1, _2) (-1, _4) 0 ]",
    "func 2",
    "current witness index : _3",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _1) 0 ]], outputs: [_3]",
    "EXPR [ (1, _0, _3) (-1, _1, _3) -1 ]",
    "EXPR [ (-1, _0) (1, _2) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "3ZLBCoMwDIbfJeceqtPJfJUhUjVKoVSp7WCI775YrNPDwMMOY5e2yd8vJD+ZoMHKdaXUbT9Cfp+gMlIp2ZWqr4WVvabsNDMIYWkNIqVgpxM1CIPaQq6dUgweQjn/aRyE9rcVhlTOAHVDNxVspcLlNbM3zT+jyXVls2yDU6ILikQtzaFf4JBH81LMSFEpXGdona53I9nnEJQw9GD6GhtncCnntaW9H7UkjtMVji/8YMpZPtr45JypMYOIzv+39hasvfDo5L55a761dcX8Ag==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    let z = func_with_nested_foo_call(x, y);\n    let z2 = func_with_nested_foo_call(x, y);\n    assert(z == z2);\n}\n\n#[fold]\nfn func_with_nested_foo_call(x: Field, y: Field) -> Field {\n    foo(x + 2, y)\n}\n\n#[fold]\nfn foo(x: Field, y: Field) -> Field {\n    assert(x != y);\n    x\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
