tooling/nargo_cli/tests/snapshots/execution_success/fold_basic_nested_call/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
acir(inline) fn main f0 {
  b0(v0: Field, v1: Field):
    (no terminator instruction)
}
